src/components/forum/forum.css
.forum {
    position: relative;

}

.forumHeading {
    color: black;
    margin-top: 227px;
    margin-right: 8.33%;
    margin-left: 8.33%;
    width: 70%;

    font-weight: 300;
    font-size: 4em;
}

.forumHeading>span {
    font-weight: 500;
}

.button {
    height: 90px;
    margin-top: 100px;
    margin-bottom: 120px;
    margin-right: 8.33%;
    margin-left: 8.33%;
    border: 2px solid #FFFFFF;
    background: linear-gradient(90.2deg, #ECECEC -34.05%, rgba(255, 255, 255, 0) 145.42%);
    border: 2px solid #FFFFFF;
    filter: drop-shadow(0px 12px 58px rgba(0, 0, 0, 0.11));
    border-radius: 16px;
    cursor: text;
    position: relative;
}

.buttonText {
    font-size: 1.25em;
    color: rgba(0, 0, 0, 0.49);
    position: absolute;
    left: 6.67%;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.plusButton {
    width: 60px;
    height: 60px;
    background: linear-gradient(126.7deg, #000000 -35.29%, rgba(0, 0, 0, 0) 282.59%);
    border-radius: 16px;
    color: white;
    position: absolute;
    right: 14px;
    display: inline-block;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    cursor: pointer;
}

.plusText {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 2.5em;
    font-weight: 400;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.forumAddComment {
    position: relative;
}

/* popupForum */
.popupBox {
    background: #FFFFFF;
    box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.11);
    border-radius: 16px;
    margin-right: 8.33%;
    margin-left: 8.33%;
    position: absolute;
    top: -2000px;
    box-sizing: border-box;
    z-index: 1000;

    opacity: 0;
    transform: scale(0.6);
    transition: top 0ms ease-in-out 200ms,
        opacity 200ms ease-in-out 0ms,
        transform 200ms ease-in-out 0ms;
}

.replyPopup {
    background: #FFFFFF;
    box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.11);
    border-radius: 16px;
    margin-right: 8.33%;
    margin-left: 8.33%;
    width: 83.5%;
    position: absolute;
    box-sizing: border-box;
    z-index: 2;
    display: none;
}

.popupBox.active {
    top: -218px;
    width: 83.5%;
    opacity: 1;
    transform: scale(1);
    transition: top 0ms ease-in-out 0ms,
        opacity 200ms ease-in-out 0ms,
        transform 200ms ease-in-out 0ms;
}

.closeButton,
.closeButtonRep {
    font-size: 50px;
    font-weight: 200;
    position: absolute;
    right: 3%;
    top: 2%;
    cursor: pointer;
}

.closeButton:hover,
.closeButtonRep:hover {
    font-weight: 400;
    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 8px 16px rgba(0, 0, 0, 0.08);
}

.popupPadding {
    padding-top: 7%;
    padding-left: 7%;
    padding-right: 7%;
    padding-bottom: 7%;
}

input[type="text"],
textarea {
    background: linear-gradient(279.01deg, #F0F0F0 -32.82%, #FAFAFA 146.71%);
    border-radius: 16px;
    border: none;
    width: 100%;
    font-size: 1.25em;
    box-sizing: border-box;
    -webkit-transition: 0.5s;
    transition: 0.5s;
    outline: none;
    box-shadow: none;
}

textarea {
    resize: none;
    height: 370px;
    padding: 4% 8%;
}

input[type="text"] {
    height: 74px;
    margin-top: 28px;
    padding: 2% 8%;
}

input[type="text"]:focus,
textarea:focus {
    border: none;
    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 8px 16px rgba(0, 0, 0, 0.08);
    -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 8px 16px rgba(0, 0, 0, 0.08);
    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 8px 16px rgba(0, 0, 0, 0.08);
}

input[type="button"] {
    margin-top: 38px;
    background: linear-gradient(93.66deg, #000000 -109.29%, rgba(46, 46, 46, 0.56) 298.88%);
    border-radius: 10px;
    color: white;
    padding: 12px 16px;
    font-size: 0.875em;
    border: none;
    cursor: pointer;
}

input[type="button"]:hover {
    border: 1px solid black;
}


/*commment table*/
.commentTable {
    margin-left: 13.75%;
    margin-right: 13.75%;
}

#MyTable {
    width: 100%;
    font-size: 1em;
    margin-bottom: 120px;
}

.avatar {
    position: relative;
    top: 7px;
}

.commenter {
    font-weight: 600;
}

.mainComment {
    position: relative;
}

.date {
    position: absolute;
    right: 0px;
    /* top: 5px; Set date before name */
    top: 15px;
    /*Set date after name */
    font-weight: 400;
    color: rgba(0, 0, 0, 0.42);
}

.mainComment>.commentText {
    padding-left: 30px;
    text-align: justify;
}

.open-ReplyModal {
    font-weight: 600;
    text-decoration: none;
    color: #000000;
    opacity: 0.44;
}

.open-ReplyModal:hover {
    opacity: 1;
}

.repComment {
    padding-left: 80px;
    position: relative;
}

.repComment>.commentText {
    padding-left: 40px;
    text-align: justify;
}

.commentGap {
    height: 4em;
}


@media (max-width:780px) {

    .closeButton,
    .closeButtonRep {
        top: 0.5%;
    }

    .popupPadding {
        padding-top: 16%;
    }

    .popupBox.active {
        top: -210px;
        opacity: 1;
        transform: scale(1);
        transition: top 0ms ease-in-out 0ms,
            opacity 200ms ease-in-out 0ms,
            transform 200ms ease-in-out 0ms;
    }
}

@media(max-width: 600px) {

    .forumHeading {
        font-size: 1.875em;
        margin-top: 65px;
    }

    .button {
        height: 42.20px;
        width: auto;
        margin-top: 27px;
        margin-bottom: 27px;
        border-radius: 10px;
    }

    .plusButton {
        width: 30px;
        height: 30px;
        border-radius: 8px;
        right: 8px;
        display: inline-block;
        top: 50%;
        -ms-transform: translateY(-50%);
        transform: translateY(-50%);
    }

    .plusText {
        font-size: 1.25em;
    }

    .buttonText {
        font-size: 0.75em;
    }

    .popupBox.active {
        top: -50px;
        opacity: 1;
        transform: scale(1);
        transition: top 0ms ease-in-out 0ms,
            opacity 200ms ease-in-out 0ms,
            transform 200ms ease-in-out 0ms;
    }

    .popupPadding {
        padding-top: 14%;
        padding-left: 9%;
        padding-right: 9%;
        padding-bottom: 9.5%;
    }

    .closeButton,
    .closeButtonRep {
        font-size: 35px;
        top: 2%;
    }

    input[type="text"],
    textarea {
        font-size: 1em;
        border-radius: 8px;
    }

    textarea {
        height: 220px;
    }

    input[type="text"] {
        height: 33px;
    }

    input[type="button"] {
        font-size: 0.75em;
        margin-top: 12px;
        padding: 7px 8px;
        border-radius: 6px;
    }

    input[type="text"] {
        margin-top: 10px;
    }

    #MyTable{
        margin-bottom: 2rem;
    }

    .commentTable {
        margin-left: 8.33%;
        margin-right: 8.33%;
    }

    .repComment {
        padding-left: 55px;
    }

    .commentText{
        padding-top: 0;
    }

    .date{
        top: 30px;
    }
    .commentGap{
        height: 0;
    }

    .commenter{
        padding-top: 0;
        padding-bottom: 0;
    }
}

